--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "npx nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "sequelize": "^6.37.4",
     "sqlite3": "^5.1.7"
